feat: #1626 Get user role assignment endpoint backend pagination (#1634)
