# client-code-gen/gen/app-access-control-api/model/sort-order-enum.ts
@@ -1,0 +1,31 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Forest Access Management - FAM - API
+ *  Forest Access Management API used by the Forest Access Management application to Define who has access to what apps, and what roles they will operate under  once access is granted. 
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: SIBIFSAF@victoria1.gov.bc.ca
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @enum {string}
+ */
+
+export const SortOrderEnum = {
+    Asc: 'asc',
+    Desc: 'desc'
+} as const;
+
+export type SortOrderEnum = typeof SortOrderEnum[keyof typeof SortOrderEnum];
+
+
+
